test/spec_vectors/type-rec/fail/module_1.wat
(module (type (func (param (ref 1)))) (type (func)))